; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_feth_enqueue_input.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_fake.c_feth_enqueue_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.ifnet_stat_increment_param = type { i32, i64 }

@ETHER_HDR_LEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.mbuf*)* @feth_enqueue_input to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @feth_enqueue_input(i32 %0, %struct.mbuf* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.mbuf*, align 8
  %5 = alloca %struct.ifnet_stat_increment_param, align 8
  store i32 %0, i32* %3, align 4
  store %struct.mbuf* %1, %struct.mbuf** %4, align 8
  %6 = bitcast %struct.ifnet_stat_increment_param* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %6, i8 0, i64 16, i1 false)
  %7 = getelementptr inbounds %struct.ifnet_stat_increment_param, %struct.ifnet_stat_increment_param* %5, i32 0, i32 0
  store i32 1, i32* %7, align 8
  %8 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %9 = call i64 @mbuf_pkthdr_len(%struct.mbuf* %8)
  %10 = load i64, i64* @ETHER_HDR_LEN, align 8
  %11 = add nsw i64 %9, %10
  %12 = getelementptr inbounds %struct.ifnet_stat_increment_param, %struct.ifnet_stat_increment_param* %5, i32 0, i32 1
  store i64 %11, i64* %12, align 8
  %13 = load i32, i32* %3, align 4
  %14 = load %struct.mbuf*, %struct.mbuf** %4, align 8
  %15 = call i32 @ifnet_input(i32 %13, %struct.mbuf* %14, %struct.ifnet_stat_increment_param* %5)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @mbuf_pkthdr_len(%struct.mbuf*) #2

declare dso_local i32 @ifnet_input(i32, %struct.mbuf*, %struct.ifnet_stat_increment_param*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
